editing footer using new footer design

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
             data-aos-delay="150"
           >
             <h1 class="text-dark fw-bold mb-5">
-              Schedule a meeting 4 easy steps
+              Schedule a meeting 3 easy steps
             </h1>
             <ul class="list-unstyled">
               <li class="my-4 level_num">
@@ -638,8 +638,8 @@
                     <h5 class="fw-bold mb-3">Create an account</h5>
                     <!-- description -->
                     <p>
-                      Create an account by providing your name, age, email,
-                      phone number, and company name (if any).
+                      Create an account by providing among others, your name,
+                      age, email, phone number, and company name (if any).
                     </p>
                   </div>
                 </div>
@@ -715,14 +715,6 @@
                 </h1>
 
                 <div>
-                  <!-- playstore button -->
-                  <a href="#" class="btn my-2 p-0">
-                    <img src="assets/images/Image 2.png" width="140" alt="" />
-                  </a>
-                  <!-- appstore button -->
-                  <a href="#" class="btn my-2 p-0">
-                    <img src="assets/images/Image 3.png" width="140" alt="" />
-                  </a>
                   <a
                     href="https://t.me/+k1-gtCQsK2JmNmRk"
                     target="_blank"
@@ -743,26 +735,34 @@
         *      F O O T E R       *
         **************************
     -->
-    <footer class="">
+    <footer class="footer-section">
       <div class="container">
         <ul class="list-unstyled d-flex">
-          <li>
-            <a href="#" class="px-2 text-dark">About</a>
-          </li>
-          <li>
-            <a href="#" class="px-2 text-dark">FAQ</a>
-          </li>
-          <li>
-            <a href="#" class="px-2 text-dark">Reviews</a>
-          </li>
-        </ul>
-        <ul class="list-unstyled d-flex">
-          <li>
-            <a href="#" class="px-2 text-muted">Privacy Policy</a>
-          </li>
-          <li>
-            <a href="#" class="px-2 text-muted">Terms &amp; Agreements</a>
-          </li>
+          <a href="index.html" class="navbar-brand">
+            <img src="assets/logos/tranquility Life14.png" width="80" alt="" />
+          </a>
+          <h1 class="text-dark mb-5 footer-title">
+            TRANQUIL
+            <br />
+            LIFE
+          </h1>
+          <ul class="list-unstyled d-flex footer-contents">
+            <li>
+              <a href="#" class="px-2 text-dark">About</a>
+            </li>
+            <li>
+              <a href="#" class="px-2 text-dark">FAQ</a>
+            </li>
+            <li>
+              <a href="#" class="px-2 text-dark">Reviews</a>
+            </li>
+            <li>
+              <a href="#" class="px-2 text-muted">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="#" class="px-2 text-muted">Terms &amp; Agreements</a>
+            </li>
+          </ul>
         </ul>
       </div>
     </footer>
