working on footer

--- a/index.html
+++ b/index.html
@@ -737,16 +737,37 @@
     -->
     <footer class="footer-section">
       <div class="container">
-        <ul class="list-unstyled d-flex">
-          <a href="index.html" class="navbar-brand">
-            <img src="assets/logos/tranquility Life14.png" width="80" alt="" />
-          </a>
-          <h1 class="text-dark mb-5 footer-title">
+        <div class="row">
+          <div class="footer-col">
+            <img src="/assets/logos/tranquility Life14h.png" alt="">
+            <h4>Transquility</h4>
+          </div>
+
+          <div class="footer-col">
+            <li><a href="#">About</a></li>
+          </div>
+        </div>
+
+
+        <!-- <div class="list-unstyled d-flex">
+          <nav class="logo">
+            <a href="index.html" class="navbar-brand">
+              <img src="assets/logos/tranquility Life14.png" width="80" alt="" />
+
+            </a>
+          </div> -->
+          
+
+
+          <!-- <h1 class="text-dark mb-5 footer-title">
             TRANQUIL
             <br />
             LIFE
-          </h1>
-          <ul class="list-unstyled d-flex footer-contents">
+          </h1> -->
+
+
+
+          <!-- <ul class="list-unstyled d-flex footer-contents">
             <li>
               <a href="#" class="px-2 text-dark">About</a>
             </li>
@@ -762,8 +783,8 @@
             <li>
               <a href="#" class="px-2 text-muted">Terms &amp; Agreements</a>
             </li>
-          </ul>
-        </ul>
+          </ul> -->
+        </div>
       </div>
     </footer>
 
