--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container">
         <!-- site logo -->
         <a href="index.html" class="navbar-brand">
-          <img src="assets/logos/tranquility Life14.png" width="60" alt="" />
+          <img src="assets/logos/tranquility Life14.png" width="60" alt />
         </a>
 
         <!-- navbar toggle button -->
@@ -80,19 +80,19 @@
                   src="assets/images/Ellipse 1.png"
                   class="gray-image rounded-circle img-1"
                   width="45"
-                  alt=""
+                  alt
                 />
                 <img
                   src="assets/images/Ellipse 2.png"
                   class="gray-image rounded-circle img-2"
                   width="45"
-                  alt=""
+                  alt
                 />
                 <img
                   src="assets/images/Ellipse 3.png"
                   class="gray-image rounded-circle img-3"
                   width="45"
-                  alt=""
+                  alt
                 />
               </div>
             </li>
@@ -119,13 +119,13 @@
                 data-aos-delay="1000"
                 class="pb-5 mb-3"
                 width="300"
-                alt=""
+                alt
               />
               <img
                 src="assets/images/Path 1.png"
                 class="hero-bg"
                 width="400"
-                alt=""
+                alt
                 data-aos="fade-in"
                 data-aos-duration="500"
                 data-aos-delay="700"
@@ -134,7 +134,7 @@
                 src="assets/images/Rectangle 4.png"
                 class="hero-overlay"
                 width="450"
-                alt=""
+                alt
                 data-aos="fade-in"
                 data-aos-duration="500"
                 data-aos-delay="700"
@@ -146,12 +146,12 @@
               data-aos-duration="1000"
               data-aos-delay="1500"
             >
-              <img src="./assets/icons/Rectangle 5.png" width="80" alt="" />
+              <img src="./assets/icons/Rectangle 5.png" width="80" alt />
               <img
                 src="./assets/icons/Icon ionic-ios-happy.png"
                 width="40"
                 class="text"
-                alt=""
+                alt
               />
             </span>
             <span
@@ -160,12 +160,12 @@
               data-aos-duration="1000"
               data-aos-delay="1500"
             >
-              <img src="./assets/icons/Rectangle 7.png" width="80" alt="" />
+              <img src="./assets/icons/Rectangle 7.png" width="80" alt />
               <img
                 src="./assets/icons/Icon material-security.png"
                 width="40"
                 class="text"
-                alt=""
+                alt
               />
             </span>
             <span
@@ -174,12 +174,12 @@
               data-aos-duration="1000"
               data-aos-delay="1500"
             >
-              <img src="./assets/icons/Rectangle 6.png" width="80" alt="" />
+              <img src="./assets/icons/Rectangle 6.png" width="80" alt />
               <img
                 src="./assets/icons/Icon ionic-ios-chatbubbles.png"
                 width="40"
                 class="text"
-                alt=""
+                alt
               />
             </span>
           </div>
@@ -203,12 +203,14 @@
               <p class="lead text-success">Coming Soon</p>
               <!-- playstore button -->
               <a href="#" class="btn my-2 p-0">
-                <img src="assets/images/Image 2.png" width="140" alt="" />
+                <img src="assets/images/Image 2.png" width="140" alt />
               </a>
               <!-- appstore button -->
               <a href="#" class="btn my-2 p-0">
-                <img src="assets/images/Image 3.png" width="140" alt="" />
+                <img src="assets/images/Image 3.png" width="140" alt />
               </a>
+            </div>
+            <div>
               <a
                 href="https://t.me/+k1-gtCQsK2JmNmRk"
                 target="_blank"
@@ -438,7 +440,7 @@
                       </div>
                       <div class="flex-grow-1 ms-3">
                         <!-- title -->
-                        <h6 class="fw-bold mb-3">Confortable To Use</h6>
+                        <h6 class="fw-bold mb-3">Comfortable To Use</h6>
                         <!-- description -->
                         <p class="mb-0">All from the comfort of your home.</p>
                       </div>
@@ -456,7 +458,7 @@
               data-aos="fade-up"
               data-aos-duration="1000"
               data-aos-delay="650"
-              alt=""
+              alt
             />
           </div>
         </div>
@@ -481,24 +483,24 @@
                 data-aos-delay="50"
                 class="pb-5"
                 width="300"
-                alt=""
+                alt
               />
               <img
                 src="assets/images/Path 1.png"
                 class="hero-bg"
                 width="400"
-                alt=""
+                alt
               />
               <img
                 src="assets/images/Rectangle 4.png"
                 class="hero-overlay"
                 width="450"
-                alt=""
+                alt
               />
             </div>
             <img
               src="assets/icons/users.png"
-              alt=""
+              alt
               data-aos="fade-right"
               data-aos-duration="1000"
               data-aos-delay="300"
@@ -510,13 +512,13 @@
               data-aos="fade-left"
               data-aos-duration="1000"
               data-aos-delay="300"
-              alt=""
+              alt
               width="200"
               class="icon icon-2"
             />
             <img
               src="assets/icons/card.png"
-              alt=""
+              alt
               data-aos="fade-right"
               data-aos-duration="1000"
               data-aos-delay="300"
@@ -554,19 +556,19 @@
             <div class="hero-image mx-auto">
               <!-- image -->
               <img
-                src="assets/images/Image from iOS.png"
+                src="assets/images/journal_ui.png"
                 data-aos="fade-up"
                 data-aos-duration="500"
                 data-aos-delay="350"
                 class="pb-5"
                 width="300"
-                alt=""
+                alt
               />
               <img
                 src="assets/images/Path 1.png"
                 class="hero-bg"
                 width="400"
-                alt=""
+                alt
               />
             </div>
           </div>
@@ -601,19 +603,21 @@
             <div class="hero-image mx-auto">
               <!-- image -->
               <img
-                src="assets/images/Image from iOS(1).png"
+                src="assets/images/schedule_instances_ui.png"
                 data-aos="fade-up"
                 data-aos-duration="500"
                 data-aos-delay="350"
                 class="pb-5"
-                width="300"
-                alt=""
+                width="500"
+                alt
               />
               <img
                 src="assets/images/Path 1.png"
                 class="hero-bg"
+                style="margin-left: 80px"
                 width="400"
-                alt=""
+                ,
+                alt
               />
             </div>
           </div>
@@ -735,58 +739,33 @@
         *      F O O T E R       *
         **************************
     -->
-    <footer class="footer-section">
+    <!-- <footer class="footer-section">
       <div class="container">
         <div class="row">
           <div class="footer-col">
-            <img src="/assets/logos/tranquility Life14h.png" alt="">
-            <h4>Transquility</h4>
+            <img class="footer-logo" src="assets/logos/tranquility Life13.png" alt="">
           </div>
 
-          <div class="footer-col">
-            <li><a href="#">About</a></li>
+          <div class="footer-links">
+            <a href="#">About</a>
+            <a href="faqs.html">FAQs</a>
+            <a href="reviews.html">Reviews</a>
+            <a href="terms.html">Terms &amp; Agreements</a>
+            <a href="privacy.html">Privacy Policy</a>
+          </div>
+        </div>
+        <div class="footer-col">
+          <div class="social-links">
+            <a href="#"> <i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/tranquil_life7"> <i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/tranquil_life.health/"> <i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/tranquil-life/"> <i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
 
-
-        <!-- <div class="list-unstyled d-flex">
-          <nav class="logo">
-            <a href="index.html" class="navbar-brand">
-              <img src="assets/logos/tranquility Life14.png" width="80" alt="" />
-
-            </a>
-          </div> -->
-          
-
-
-          <!-- <h1 class="text-dark mb-5 footer-title">
-            TRANQUIL
-            <br />
-            LIFE
-          </h1> -->
-
-
-
-          <!-- <ul class="list-unstyled d-flex footer-contents">
-            <li>
-              <a href="#" class="px-2 text-dark">About</a>
-            </li>
-            <li>
-              <a href="#" class="px-2 text-dark">FAQ</a>
-            </li>
-            <li>
-              <a href="#" class="px-2 text-dark">Reviews</a>
-            </li>
-            <li>
-              <a href="#" class="px-2 text-muted">Privacy Policy</a>
-            </li>
-            <li>
-              <a href="#" class="px-2 text-muted">Terms &amp; Agreements</a>
-            </li>
-          </ul> -->
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- scroll to top -->
     <a href="#" class="scroll-to-top text-success">
