chnaged email address extension from .health to .app

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- nav link -->
             <li class="nav-item">
               <a
-                href="mailto:contact@tranquil-life.health?subject=Contact Us Message&body=Dear Tranquil Life,..."
+                href="mailto:contact@tranquil-life.app?subject=Contact Us Message&body=Dear Tranquil Life,..."
                 class="nav-link"
                 target="_blank"
                 >Contact Us</a
@@ -61,7 +61,7 @@
             <!-- nav link -->
             <li class="nav-item">
               <a
-                href="mailto:contact@tranquil-life.health?subject=Request To Become a Consultant on Tranquil Life&body=Dear Hiring manager, This letter is to express my interest in being a Consultant on Tranquil Life. With a {E N T E R   Y O U R   Q U A L I F I C A T I O N S}, I am confident I will be an asset to your organization. I enjoy being challenged and engaging with clients that require me to go extra mile outside my comfort and knowledge set, as continuing to learn new approaches and techniques are important to me and the success of your organization. I’ve attached a copy of my resume that details my work experience. I can be reached anytime via my cell phone, {P H O N E    N U M B E R} or via email at {E M A I L    A D D R E S S}. Thank you for your time and consideration. I look forward to speaking with you about this opportunity. Sincerely, {E N T E R   Y O U R   N A M E}"
+                href="mailto:contact@tranquil-life.app?subject=Request To Become a Consultant on Tranquil Life&body=Dear Hiring manager, This letter is to express my interest in being a Consultant on Tranquil Life. With a {E N T E R   Y O U R   Q U A L I F I C A T I O N S}, I am confident I will be an asset to your organization. I enjoy being challenged and engaging with clients that require me to go extra mile outside my comfort and knowledge set, as continuing to learn new approaches and techniques are important to me and the success of your organization. I’ve attached a copy of my resume that details my work experience. I can be reached anytime via my cell phone, {P H O N E    N U M B E R} or via email at {E M A I L    A D D R E S S}. Thank you for your time and consideration. I look forward to speaking with you about this opportunity. Sincerely, {E N T E R   Y O U R   N A M E}"
                 class="nav-link"
                 target="_blank"
                 >Become a Consultant</a
