modified schedule meeting image bg dimension and nav bar to make perfectly responsive on mobile

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                 href="mailto:contact@tranquil-life.app?subject=Request To Become a Consultant on Tranquil Life&body=Dear Hiring manager, This letter is to express my interest in being a Consultant on Tranquil Life. With a {E N T E R   Y O U R   Q U A L I F I C A T I O N S}, I am confident I will be an asset to your organization. I enjoy being challenged and engaging with clients that require me to go extra mile outside my comfort and knowledge set, as continuing to learn new approaches and techniques are important to me and the success of your organization. I’ve attached a copy of my resume that details my work experience. I can be reached anytime via my cell phone, {P H O N E    N U M B E R} or via email at {E M A I L    A D D R E S S}. Thank you for your time and consideration. I look forward to speaking with you about this opportunity. Sincerely, {E N T E R   Y O U R   N A M E}"
                 class="nav-link"
                 target="_blank"
-                >Become a Consultant</a
               >
+                Become a Consultant
+              </a>
             </li>
             <!-- nav link -->
             <li class="nav-item">
@@ -75,7 +76,7 @@
             </li>
             <!-- nav link -->
             <li class="nav-item d-none d-lg-block">
-              <div class="nav-image">
+              <div class="nav-image" style="margin-right: 80px">
                 <img
                   src="assets/images/Ellipse 1.png"
                   class="gray-image rounded-circle img-1"
@@ -546,7 +547,7 @@
 
     <!-- 
         **********************************
-        *      S E L F     C A R E       *
+        *      MOOD TRACKING      *
         **********************************
     -->
     <section class="section bg-right">
@@ -577,7 +578,7 @@
             data-aos="fade-in"
             data-aos-duration="500"
             data-aos-delay="150"
-          >
+            >
             <h1 class="text-dark fw-bold mb-5">
               Monitor your mental health and become happier
             </h1>
@@ -596,11 +597,11 @@
         *      S C H E D U L E S    M E E T I N G     S T E P S        *
         ****************************************************************
     -->
-    <section class="section">
+    <section class="section bg-left">
       <div class="container">
-        <div class="row justify-content-between align-items-center">
-          <div class="col-lg-5">
-            <div class="hero-image mx-auto">
+        <div class="row justify-content-lg-between align-items-lg-center">
+          <div class="col-lg-5 image-container">
+            <div class="schedule-image mx-auto">
               <!-- image -->
               <img
                 src="assets/images/schedule_instances_ui.png"
@@ -614,9 +615,8 @@
               <img
                 src="assets/images/Path 1.png"
                 class="hero-bg"
-                style="margin-left: 80px"
                 width="400"
-                ,
+                style="margin-left: 80px; margin-bottom: 50px !important;"
                 alt
               />
             </div>
@@ -674,11 +674,11 @@
                     <h5 class="steps fw-bold">03</h5>
                   </div>
                   <div class="flex-grow-1 ms-4">
-                    <!-- title -->
+                     <!-- title -->
                     <h5 class="fw-bold mb-3">
                       Schedule a meeting with the consultant of your choice
                     </h5>
-                    <!-- description -->
+                     <!-- description -->
                     <p>
                       You can schedule a virtual meeting within the Tranquil
                       Life application, with any of our reliable consultants.
