fixed responsiveness, added links, imoroved custom mal to become a therapist, added footer

--- a/index.html
+++ b/index.html
@@ -53,27 +53,30 @@
             <!-- nav link -->
             <li class="nav-item">
               <a
-                href="mailto:contact@tranquil-life.app?subject=Contact Us Message&body=Dear Tranquil Life,..."
+                href="mailto:contact@tranquil-life.app?subject=&body="
                 class="nav-link"
                 target="_blank"
-                >Contact Us</a
+                >Contact us</a
               >
             </li>
             <!-- nav link -->
             <li class="nav-item">
               <a
-                href="mailto:contact@tranquil-life.app?subject=Request To Become a Consultant on Tranquil Life&body=Dear Hiring manager, This letter is to express my interest in being a Consultant on Tranquil Life. With a {E N T E R   Y O U R   Q U A L I F I C A T I O N S}, I am confident I will be an asset to your organization. I enjoy being challenged and engaging with clients that require me to go extra mile outside my comfort and knowledge set, as continuing to learn new approaches and techniques are important to me and the success of your organization. I’ve attached a copy of my resume that details my work experience. I can be reached anytime via my cell phone, {P H O N E    N U M B E R} or via email at {E M A I L    A D D R E S S}. Thank you for your time and consideration. I look forward to speaking with you about this opportunity. Sincerely, {E N T E R   Y O U R   N A M E}"
+                href="mailto:contact@tranquil-life.app?subject=&body="
                 class="nav-link"
                 target="_blank"
+                >Work with us</a
               >
-                Become a Consultant
-              </a>
             </li>
             <!-- nav link -->
             <li class="nav-item">
-              <a href="#" class="btn border-success btn-light text-success px-4"
-                >Partner With Us</a
+              
+              <a href="mailto:contact@tranquil-life.app?subject=Request%20To%20Become%20a%20Therapist%20on%20Tranquil%20Life&body=Dear%20Hiring%20Manager,%0D%0A%0D%0AI%20am%20writing%20to%20express%20my%20sincere%20interest%20in%20the%20Therapist%20position%20at%20Tranquil%20Life.%20With%20a%20strong%20background%20in%20{Enter%20Your%20Qualifications},%20I%20am%20confident%20that%20my%20skills%20and%20experience%20make%20me%20a%20valuable%20asset%20to%20your%20esteemed%20organisation.%0D%0A%0D%0AAttached%20is%20my%20resume,%20which%20provides%20a%20comprehensive%20overview%20of%20my%20professional%20experience%20and%20qualifications.%0D%0A%0D%0AI%20am%20available%20at%20your%20convenience%20to%20discuss%20how%20my%20expertise%20aligns%20with%20the%20needs%20of%20Tranquil%20Life.%20You%20can%20reach%20me%20via%20phone%20at%20{Phone%20Number}.%0D%0A%0D%0AThank%20you%20for%20considering%20my%20application.%20I%20am%20eager%20to%20further%20discuss%20how%20I%20can%20contribute%20to%20the%20success%20of%20Tranquil%20Life.%0D%0A%0D%0AWarm%20regards,%0D%0A{Your%20Name}"
+              class="nav-link"
+                target="_blank"
               >
+                Become a Therapist
+              </a>
             </li>
             <!-- nav link -->
             <li class="nav-item d-none d-lg-block">
@@ -202,19 +205,19 @@
             </p>
 
             <div>
-              <p class="lead text-success">Coming Soon</p>
+              <!-- <p class="lead text-success">Coming Soon</p> -->
               <!-- playstore button -->
               <a href="#" class="btn my-2 p-0">
                 <img src="assets/images/Image 2.png" width="140" alt />
               </a>
               <!-- appstore button -->
-              <a href="#" class="btn my-2 p-0">
+              <a href="https://testflight.apple.com/join/UhQb2QKl" class="btn my-2 p-0">
                 <img src="assets/images/Image 3.png" width="140" alt />
               </a>
             </div>
             <div>
               <a
-                href="https://t.me/+k1-gtCQsK2JmNmRk"
+                href="https://chat.whatsapp.com/LBpn79hmWEeE9FLNvhUGTu"
                 target="_blank"
                 class="btn my-2 btn-light border-success py-3 shadow px-4 text-success"
               >
@@ -721,7 +724,7 @@
 
                 <div>
                   <a
-                    href="https://t.me/+k1-gtCQsK2JmNmRk"
+                    href="https://chat.whatsapp.com/LBpn79hmWEeE9FLNvhUGTu"
                     target="_blank"
                     class="btn my-2 btn-light border-success py-3 shadow px-4 text-success"
                   >
@@ -734,44 +737,67 @@
         </div>
       </div>
     </section>
-
-    <!-- 
-        **************************
-        *      F O O T E R       *
-        **************************
-    -->
-    <!-- <footer class="footer-section">
-      <div class="container">
-        <div class="row">
-          <div class="footer-col">
-            <img class="footer-logo" src="assets/logos/tranquility Life13.png" alt="">
-          </div>
-
-          <div class="footer-links">
-            <a href="#">About</a>
-            <a href="faqs.html">FAQs</a>
-            <a href="reviews.html">Reviews</a>
-            <a href="terms.html">Terms &amp; Agreements</a>
-            <a href="privacy.html">Privacy Policy</a>
-          </div>
-        </div>
-        <div class="footer-col">
-          <div class="social-links">
-            <a href="#"> <i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/tranquil_life7"> <i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/tranquil_life.health/"> <i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/tranquil-life/"> <i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </div>
-
-        </div>
-      </div>
-    </footer> -->
+    
 
     <!-- scroll to top -->
     <a href="#" class="scroll-to-top text-success">
       <i class="fas fa-arrow-up"></i>
     </a>
+
+      <!-- Footer -->
+  <footer class="footer-section">
+    <div class="row">
+      <div class="footer-logo footer-col">
+          <img src="assets/logos/tranquility Life13.png" alt="Tranquil Life Logo">
+      </div>
+      <div class="footer-col">
+        <h4>Company</h4>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="#">Review</a></li>
+          <li><a href="#">FAQs</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Aid</h4>
+        <ul>
+          <li><a href="#">Donate</a></li>
+          <li><a href="#">Be a volunteer</a></li>
+          <li><a href="#">Be a sponsor</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="#">Terms & Agreements</a></li>
+          <li><a href="#">Privacy policy</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  
+
+      <div class="row">
+        <div class="footer-links">
+          <div class="social-links">
+            <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/tranquil_life.app/" class="instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/company/tranquil-life" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+          <div class="app-links">
+            <a href="#"><img src="assets/images/Image 2.png" alt="Google Play"></a>
+            <a href="https://testflight.apple.com/join/UhQb2QKl"><img src="assets/images/Image 3.png" alt="App Store"></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>Tranquil Life © 2023</p>
+      </div>
+    </div>
+  </footer>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/fontawesome.min.js"></script>
